# mathematics-learning-for-trading

./: README.md  README.specify.md
chapters/01-stochastic-calculus/: chapter.en.md  chapter.ru.md  readme.simple.en.md  readme.simple.ru.md
chapters/01-stochastic-calculus/code/: Cargo.toml
chapters/01-stochastic-calculus/code/benches/: gbm_benchmark.rs
chapters/01-stochastic-calculus/code/src/: brownian.rs  gbm.rs  heston.rs  jump_diffusion.rs  lib.rs  main.rs  monte_carlo.rs  sde.rs
chapters/02-market-microstructure/: README.en.md  README.ru.md  README.specify.md  readme.simple.en.md  readme.simple.ru.md
chapters/03-portfolio-optimization/: README.en.md  README.ru.md  README.simple.en.md  README.simple.ru.md  README.specify.md
chapters/04-ml-time-series/: README.en.md  README.ru.md  README.specify.md  readme.simple.en.md  readme.simple.ru.md
chapters/05-low-latency-systems/: README.specify.md  chapter.en.md  chapter.ru.md  readme.simple.en.md  readme.simple.ru.md
