[package]
name = "stochastic-calculus"
version = "0.1.0"
edition = "2021"
description = "Stochastic calculus implementations for algorithmic trading"
license = "MIT"

[dependencies]
rand = "0.8"
rand_distr = "0.4"
rayon = "1.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gbm_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
